--- a/style/basic/helpers.css
+++ b/style/basic/helpers.css
@@ -15,3 +15,14 @@
     margin: 0;
     padding: 0;
 }
+
+.hidden {
+    display: none;
+}
+
+.border {
+    border: var(--header-bgc) solid 3px;
+    position: absolute;
+    z-index: 10;
+    animation: name duration timing-function delay iteration-count direction fill-mode;
+}
