--- a/style/components/modal.css
+++ b/style/components/modal.css
@@ -20,19 +20,25 @@
     align-items: center;
     grid-template-rows: repeat(12, 1fr);
     grid-template-columns: 3fr repeat(10, 1fr);
+    gap: 5px 5px;
 }
 
 .meme-modal .canvas-container {
     grid-row: 1 / span 12;
+    grid-column: 1 /span 4;
     display: flex;
     justify-content: center;
+    width: min-content;
+    height: min-content;
+    border: black solid 5px;
+    position: relative;
     /* width: 100px;
     height: 100px; */
 }
 
 .meme-modal .meme-text {
     grid-row: 1;
-    grid-column: 4 /span 7;
+    grid-column: 4 /span 5;
     background-color: #fff;
     border: 1px solid #d5d9d9;
     border-radius: 8px;
@@ -50,41 +56,84 @@
     vertical-align: middle;
 }
 
-.meme-modal .font-up-btn {
+.meme-modal .switch-line-up {
     grid-row: 2;
     grid-column: 4;
-    /* width: fit-content; */
 }
 
-.meme-modal .font-down-btn {
+.meme-modal .switch-line-down {
     grid-row: 2;
     grid-column: 5;
-    /* width: fit-content; */
+}
+
+.meme-modal .add-line {
+    grid-row: 2;
+    grid-column: 6;
+}
+
+.meme-modal .remove-line {
+    grid-row: 2;
+    grid-column: 7;
+}
+
+.meme-modal .restore {
+    grid-row: 2;
+    grid-column: 8;
 }
 
 .meme-modal .font-select {
+    grid-row: 4;
+    grid-column: 4 /span 2;
+}
+
+.meme-modal .font-size-up {
     grid-row: 3;
     grid-column: 4;
-    /* width: fit-content; */
+}
+
+.meme-modal .font-size-down {
+    grid-row: 3;
+    grid-column: 5;
+}
+
+.meme-modal .ltr {
+    grid-row: 3;
+    grid-column: 6;
+}
+
+.meme-modal .center {
+    grid-row: 3;
+    grid-column: 7;
+}
+
+.meme-modal .rtl {
+    grid-row: 3;
+    grid-column: 8;
+}
+
+.meme-modal .font-color {
+    grid-row: 4;
+    grid-column: 7;
+}
+
+.meme-modal .stroke-color {
+    grid-row: 4;
+    grid-column: 8;
 }
 
 .meme-modal .download-btn {
-    grid-row: 4;
+    grid-row: 5;
     grid-column: 4;
 }
 
 .meme-modal .upload-btn {
-    grid-row: 4;
+    grid-row: 5;
     grid-column: 6;
 }
 
 .meme-modal .share-btn {
-    grid-row: 4;
-    grid-column: 10;
-}
-
-.hidden {
-    display: none;
+    grid-row: 5;
+    grid-column: 8;
 }
 
 .button {
@@ -103,7 +152,8 @@
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
-    width: 100px;
+    width: 100%;
+    height: 100%;
 }
 
 .button:hover {
@@ -115,25 +165,3 @@
     box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
     outline: 0;
 }
-
-.meme-modal .canvas-container .canvas-text {
-    position: fixed;
-    z-index: 2;
-    color: white;
-}
-
-.meme-modal .canvas-container .canvas-text1 {
-    width: fit-content;
-    height: fit-content;
-    top: 15%;
-    font-size: 1.25rem;
-}
-
-
-/* .meme-modal .canvas-container .canvas-text2 {}
-
-.meme-modal .canvas-container .canvas-text3 {}
-
-.meme-modal .canvas-container .canvas-text4 {}
-
-.meme-modal .canvas-container .canvas-text5 {} */
